[package]
name = "dvcs-wye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffy = "0.3.0"
petgraph = "0.6.2"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # temporary in place for serialize/desirialize
# druid = { version = "0.6.0", features = ["im", "svg", "image"] }
# log = { version = "0.4", features = ["std", "serde"] }
clap = { version = "4.0.28", features = ["derive"] }
users = "0.11.0"
